:lipstick: Add button to CTA button

--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -1,4 +1,4 @@
-
+@import "mixins";
 .main_anc{
     background-color: black;
 }
@@ -121,5 +121,5 @@
 }
 
 .product_anc_CTA{
-    
+    @include btn(#fff, #383838, #2c2c2d);
 }
