:lipstick: Add some more effects

--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -9,7 +9,7 @@
 
 .image_anc{
     border-radius: 100px;
-    height: calc(100vh - 120px)!important;  
+    height: 450px!important;  
     width: auto;
     max-width: 50%!important;
 
@@ -26,7 +26,7 @@
     
     @media (max-width: 768px){
         flex-direction: column;
-        gap: 0px;
+        gap: 20px;
     }
 }
 
@@ -139,13 +139,14 @@
     text-align: center;
     z-index: 2;
     color: #131313;
+    border-radius: 120px;
   }
 
   .sine-wave-container {
     position: relative;
     width: 100%;
-    height: 50vh;
+    height: 33vh;
     overflow: hidden;
-    
+
     z-index: 1;
   }
