--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -57,6 +57,10 @@
 
 .subtitle_anc{
     font-family: 'Helvetica Neue LT';
+    @media (max-width: 1280px){
+        font-size: 1.3rem;
+        text-align: center;
+    }
 }
 
 .text_anc{
@@ -78,6 +82,11 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    align-items: center;
+
+    @media (max-width: 1280px){
+        font-size: 1rem;
+    }
 }
 
 
@@ -146,11 +155,12 @@
     z-index: 2;
     color: #131313;
 
-    @media (max-width: 768px){
+    @media (max-width: 1280px){
+        margin: -40px 0;
     }
   }
 
-  .sine-wave-container {
+.sine-wave-container {
     position: relative;
     width: 100%;
     height: 33vh;
