--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -130,11 +130,14 @@
     display: flex;
     gap: 10px;
     color: #131313;
-    font-size: 1.2rem;
     list-style-type: none;
     margin: 0;
     padding: 0;
     align-items: center;
+
+    @media (max-width: 1280px){
+        font-size: 1rem;
+    }
 }
 
 .product_anc_CTA{
@@ -170,5 +173,32 @@
 
     @media (max-width: 1280px){
         height: 100vh;
+    }
+}
+
+.product-features-item__icon{
+    width: 30px;
+    height: 30px;
+
+    @media (max-width: 1280px){
+        width: 20px;
+        height: 20px;
+    }
+}
+
+
+
+.product-details{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-items: center !important;
+    align-items: center !important;
+}
+
+.product-title{
+    font-size: 1.5rem;
+    @media (max-width: 1280px){
+        font-size: 1.2rem;
     }
 }
