--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -96,6 +96,9 @@
 .products_anc{
     background-color: white;
     padding: 50px 10%;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 
 }
 
