--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -213,3 +213,11 @@
         font-size: 1.2rem;
     }
 }
+
+.product-price{
+    font-size: 1.3rem;
+
+    @media (max-width: 1280px){
+        font-size: 1rem;
+    }
+}
