--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -16,144 +16,14 @@
   }
 }
 
+.main-container{ 
+  padding: 0 5%;
+}
+
 #home-grid {
   width: 100%;
   height: auto;
-  max-height: calc(100vh - 58px)!important;
-  // display: grid;
-  // grid-template-columns: 1fr 1fr 1fr;
-  // grid-template-rows: 1fr 1fr;
-  // grid-template-areas: "featured featured second" "featured featured third";
-  // height: 64vw;
-  // @media (min-aspect-ratio: 5/4) {
-  //   // height: calc(100vh - 58px);
-  // }
-  // @media (max-width: 768px) {
-  //   display: block;
-  //   height: auto;
-  //   padding: 20px 20px 0px 20px;
-  // }
-
-  // section {
-  //   max-height: 100%;
-  //   position: relative;
-  //   overflow: hidden;
-  //   cursor: pointer;
-  //   @media (max-width: 768px) {
-  //     height: 100vw;
-  //   }
-
-  //   &:nth-child(1) {
-  //     grid-area: featured;
-  //     @media (max-width: 768px) {
-  //       height: calc(100vh - 58px);
-  //     }
-
-  //     .layer {
-  //       top: 70%;
-  //       left: 10%;
-  //       width: 27vw;
-  //       position: absolute;
-  //       bottom: auto;
-  //       padding: 6vw 0;
-  //       margin: 0 7.8125vw;
-  //       z-index: 1;
-  //       text-align: left;
-
-  //       @media (max-width: 768px) {
-  //         left: 0;
-  //       }
-
-  //       h5 {
-  //         font-size: 2.8125vw;
-  //       }
-
-  //       p {
-  //         font-size: 18px;
-  //       }
-  //     }
-  //   }
-
-  //   &:nth-child(2) {
-  //     grid-area: second;
-  //   }
-
-  //   &:nth-child(3) {
-  //     grid-area: third;
-
-  //     img {
-  //       object-position: top;
-  //     }
-  //   }
-
-  //   picture {
-  //     position: absolute;
-  //     top: 0;
-  //     left: 0;
-  //     width: 100%;
-  //     height: 100%;
-
-  //     img {
-  //       width: 100%;
-  //       height: 100%;
-  //       object-fit: fill;
-  //     }
-  //   }
-
-  //   .layer {
-  //     width: 100%;
-  //     top: 55%;
-  //     position: absolute;
-  //     bottom: auto;
-  //     margin: 3.92857rem 0 0;
-  //     z-index: 1;
-  //     transform: none;
-  //     left: 0;    
-  //     text-align: center;
-  //     @media (max-width: 768px) {
-  //       left: 0;
-  //       width: 100% !important;
-  //       padding: 1.75rem 1.25rem !important;
-  //       margin: 0 !important;
-  //     }
-
-  //     h5 {
-  //       font-size: 1.28571rem;
-  //       color: #fff;
-  //       margin-bottom: 1.42857rem;
-  //       text-transform: uppercase;
-  //       line-height: .85em;
-  //       letter-spacing: -.05em;
-  //       font-family: $titleFont;
-  //       @media (max-width: 768px) {
-  //         font-size: 2.25rem !important;
-  //         margin-bottom: 1.5rem;
-  //         text-align: center ;
-  //       }
-  //     }
-
-  //     p {
-  //       color: #fff;
-  //       font-size: 14px;
-  //       line-height: 1;
-  //       margin-bottom: 1.42857rem;
-  //       @media (max-width: 768px) {
-  //         font-size: .85rem;
-  //         text-align: center;
-  //       }
-  //     }
-
-  //     .cta-wrapper {
-  //       .cta {
-  //         display: inline-block;
-  //         @include btn(#000, #f6f6f6, #fff);
-  //         @media (max-width: 768px) {
-  //           width: 100%;
-  //         }
-  //       }
-  //     }
-  //   }
-  // }
+  border-radius: 36px;
 }
 
 #gallery {
