:lipstick: Send more values

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -37,7 +37,7 @@
   font-size: 2rem;
   font-weight: 500;
   margin-bottom: 1rem;
-  text-align: center;
+  text-align: start;
   color: white;
 }
 
