:sparkles: Add waves

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -24,6 +24,7 @@
 #home-grid {
   width: 100%;
   height: auto;
+  padding-top: 25px;
 }
 
 .home-grid__picture{
@@ -31,7 +32,6 @@
 }
 
 .home-info{
-  padding-top: 25px;
   position: absolute;
   top: 50%;
   left: 15%;
@@ -132,5 +132,31 @@
 
   @media (max-width: 768px) {
     padding: 20px 20px 0px 20px;
+  }
+}
+
+
+
+
+.wave-container {
+  display: flex;
+  align-items: flex-end;
+  height: 80vh;
+}
+
+.wave-bar {
+  width: 20px;
+  background-color: #3498db;
+  margin: 0 2px;
+  animation: waveAnimation 1s ease-in-out infinite;
+  transform-origin: bottom center;
+}
+
+@keyframes waveAnimation {
+  0%, 100% {
+    transform: scaleY(0.5);
+  }
+  50% {
+    transform: scaleY(1.5);
   }
 }
