--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -49,7 +49,7 @@
 
   @media (max-width: 1024px) {
     top: 40%;
-    left: 5%;
+    left: 15%;
   }
 }
 
@@ -83,8 +83,10 @@
 .home-title__image{
 
   @media (max-width: 1024px) {
-    height: 30px;
-    width: auto;
+    position: absolute;
+    left: 25%;
+    height: 45px!important;
+    width: auto!important;
   }
 }
 
