--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -98,6 +98,46 @@
 
 // FEATURED
 
+
+.top-products__title{
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.top-products-container{
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+
+  @media (max-width: 1024px) {
+    flex-direction: column;
+    gap: 20px
+  }
+}
+
+.product-details{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-title{
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 0.3rem;
+  text-align: center;
+}
+
+.product-price{
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-bottom: 0.3rem;
+  text-align: center;
+}
+
+//  OLDS
+
 #gallery {
   display: flex;
   margin-bottom: -3px;
