--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -115,6 +115,18 @@
   }
 }
 
+
+.top-products-container__item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.product-image{
+  width: 200px;
+}
+
+
 .product-details{
   display: flex;
   flex-direction: column;
