--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -98,6 +98,9 @@
 
 // FEATURED
 
+.top-products{
+  padding: 30px 0;
+}
 
 .top-products__title{
   font-size: 2rem;
@@ -119,7 +122,7 @@
 .top-products-container__item{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 .product-image{
@@ -135,14 +138,14 @@
 }
 
 .product-title{
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 700;
   margin-bottom: 0.3rem;
   text-align: center;
 }
 
 .product-price{
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 500;
   margin-bottom: 0.3rem;
   text-align: center;
