:lipstick: Add product size

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -138,14 +138,15 @@
 }
 
 .product-title{
-  font-size: 1.2rem;
-  font-weight: 700;
+  font-size: 1.1rem!important;
+  font-weight: 300!important;
   margin-bottom: 0.3rem;
   text-align: center;
+  width: 15rem;
 }
 
 .product-price{
-  font-size: 1rem;
+  font-size: 0.9rem!important;
   font-weight: 500;
   margin-bottom: 0.3rem;
   text-align: center;
