--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -50,8 +50,14 @@
   left: 15%;
 
   @media (max-width:1280px){
-    top: 30%;
-    left: 15%;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 }
 
@@ -97,7 +103,6 @@
 
   @media (max-width: 1024px) {
     margin-top: 7rem;
-    margin-left: 3rem;
   }
 
 }
