--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -103,7 +103,7 @@
 
 .top-products-container{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   gap: 50px;
 
   @media (max-width: 1280px) {
