:lipstick: Add padding to title mas vendidos

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -98,7 +98,8 @@
 
 .top-products__title{
   font-size: 2rem;
-  font-weight: 700;
+  font-weight: 900;
+  padding: 15px 0;
 }
 
 .top-products-container{
