--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -147,6 +147,15 @@
   text-align: center;
 }
 
+// CATEGORIES
+.categories{
+  padding: 50px 10%;
+
+  @media (max-width: 1280px) {
+    padding: 50px 5%;
+  }
+}
+
 //  OLDS
 
 #gallery {
