:lipstick: Add style to buttons

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -156,6 +156,21 @@
   }
 }
 
+.categories-additionals{
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+
+  @media (max-width: 1280px) {
+    flex-direction: column;    
+  }
+}
+
+.categories-additionals__button{
+  flex-grow: 1;
+  padding: 10px 40px;
+}
+
 //  OLDS
 
 #gallery {
