:lipstick: Add radius to buttons

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -170,6 +170,9 @@
 .categories-additionals__button{
   flex-grow: 1;
   padding: 10px 40px;
+  border-radius: 35px;
+  border: none;
+  margin: 0;
 }
 
 
@@ -187,6 +190,9 @@
 .categories-generals__button{
   flex-grow: 1;
   padding: 10px 40px;
+  border-radius: 35px;
+  border: none;
+  margin: 0;
 }
 
 //  OLDS
