:lipstick: Add button as font

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -175,6 +175,9 @@
   margin: 0;
 }
 
+.categories-additionals__button--ofertas{
+  background: url(../assets/PACKS_BUTTON_HOME.png) no-repeat center;
+}
 
 .categories-generals{
   display: flex;
