:lipstick: Add more style to buttons

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -169,12 +169,13 @@
 
 .categories-additionals__button{
   flex-grow: 1;
-  padding: 5px 40px;
+  padding: 20px 40px;
   border-radius: 35px;
   border: none;
   margin: 0;
   font-size:3rem;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.7);
+  font-weight: 700;
 }
 
 .categories-additionals__button--ofertas{
