--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -173,9 +173,14 @@
   border-radius: 35px;
   border: none;
   margin: 0;
-  font-size:3rem;
-  color: rgba(255, 255, 255, 0.7);
+  font-size:3rem; 
+  color: rgba(255, 255, 255, 0.5);
   font-weight: 700;
+}
+
+.categories-additionals__button:hover{
+  color: rgba(255, 255, 255, 1);
+  transition: 0.5s;
 }
 
 .categories-additionals__button--ofertas{
