:lipstick: Put font-family

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -149,6 +149,7 @@
 
 // CATEGORIES
 .categories{
+  font-family: 'Helvetica Neue', sans-serif;
   padding: 50px 10%;
 
   @media (max-width: 1280px) {
