--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -182,6 +182,7 @@
 .categories-additionals__button:hover{
   color: rgba(255, 255, 255, 1);
   transition: 0.5s;
+  font-size: 3.2rem;
 }
 
 .categories-additionals__button--ofertas{
