:lipstick: Correct hovering back

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -177,6 +177,7 @@
   font-size:3rem; 
   color: rgba(255, 255, 255, 0.5);
   font-weight: 700;
+  transition: 0.5s;
 }
 
 .categories-additionals__button:hover{
