:sparkles: Add some new figures

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -217,6 +217,22 @@
   margin: 0;
 }
 
+.categories-additionals__button--headphones{
+  background: url(../assets/HP_CATEGORY_CUT.jpg) no-repeat center;
+  background-size: cover;
+}
+
+.categories-additionals__button--tw{
+  background: url(../assets/TW_CATEGORY_CUT.jpg) no-repeat center;
+  background-size: cover;
+}
+
+
+.categories-additionals__button--bluetooth{
+  background: url(../assets/BT_CATEGORY_CUT.jpg) no-repeat center;
+  background-size: cover;
+}
+
 //  OLDS
 
 #gallery {
