:lipstick: Correct the buttons styling

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -233,6 +233,15 @@
   background-size: cover;
 }
 
+
+.categories-additionals__button{
+  flex-grow: 1;
+  padding: 10px 40px;
+  border-radius: 35px;
+  border: none;
+  margin: 0;
+}
+
 //  OLDS
 
 #gallery {
