--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -211,10 +211,14 @@
 
 .categories-generals__button{
   flex-grow: 1;
-  padding: 10px 40px;
+  padding: 60px 20px;
   border-radius: 35px;
   border: none;
   margin: 0;
+  font-size:3rem; 
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 700;
+  transition: 0.5s;
 }
 
 .categories-generals__button--headphones{
