:lipstick: More values contrast

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -228,17 +228,21 @@
 .categories-generals__button--headphones{
   background: url(../assets/HP_CATEGORY_CUT.jpg) no-repeat center;
   background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .categories-generals__button--tw{
   background: url(../assets/TW_CATEGORY_CUT.jpg) no-repeat center;
   background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
+
 }
 
 
 .categories-generals__button--bluetooth{
   background: url(../assets/BT_CATEGORY_CUT.jpg) no-repeat center;
   background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 //  OLDS
