--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -221,6 +221,11 @@
   font-weight: 700;
   transition: 0.2s;
   filter: grayscale(100%);
+
+  @media (max-width: 1280px) {
+    padding: 20px 40px;
+  }
+
 }
 
 .categories-generals__button:hover{
