--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -36,7 +36,7 @@
     top: 0%;
     left: 0%;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     flex-direction: column;
   }
@@ -56,6 +56,7 @@
   @media (max-width: 640px) {
     font-size: 1.8rem;
     text-align: center;
+    display: none;
   }
 }
 
@@ -65,6 +66,7 @@
   @media (max-width: 640px) {
     font-size: 1.2rem;
     text-align: center;
+    display: block;
   }
 }
 
