--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -39,6 +39,7 @@
     justify-content: end;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 20px;
   }
 }
 
@@ -99,7 +100,7 @@
 }
 
 .top-products__title{
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 900;
   padding: 15px 0;
 }
