--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -92,7 +92,8 @@
 // FEATURED
 
 .top-products{
-  padding: 50px 10%;
+  padding: 20px 10%;
+  padding-top: 50px;
 
   @media (max-width: 1280px) {
     padding: 50px 5%;
@@ -153,7 +154,7 @@
 // CATEGORIES
 .categories{
   font-family: 'Helvetica Neue', sans-serif;
-  padding: 50px 10%;
+  padding: 20px 10%;
 
   @media (max-width: 1280px) {
     padding: 50px 5%;
