:lipstick: Add more details to page

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -358,10 +358,12 @@
   justify-content: center;
   background-color: black;
   border: 2px solid white ;
+  border-radius: 5px;
+  gap: 10px
 }
 
 .fixedbutton__img{
-  width: 50px;
+  width: 35px;
   height: auto;
 }
 
