--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -357,6 +357,7 @@
   align-items: center;
   justify-content: center;
   z-index: 1000;
+  text-decoration: none;
 }
 
 .fixedbutton__img{
@@ -373,7 +374,7 @@
   margin-left: -20px;
   border-radius: 10px;
   font-size: 0.8rem;
-  font-weight: 700;
+  font-weight: 800;
   text-align: left;
   color: black;
   background-color: white;
