--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -364,6 +364,10 @@
   width: 50px;
   height: auto;
   z-index: 1000;
+
+  @media (max-width: 1280px) {
+    width: 3cqw;
+  }
 }
 
 .fixedbutton__text{
@@ -378,4 +382,9 @@
   text-align: left;
   color: black;
   background-color: white;
+
+  @media (max-width: 1280px) {
+    font-size: 0.5rem;
+    width: 115px;
+  }
 }
