--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -358,6 +358,11 @@
   justify-content: center;
   z-index: 1000;
   text-decoration: none;
+
+  @media (max-width: 1280px) {
+    bottom: 10px;
+    right: 10px; 
+  }
 }
 
 .fixedbutton__img{
@@ -366,7 +371,7 @@
   z-index: 1000;
 
   @media (max-width: 1280px) {
-    width: 3cqw;
+    width: 30px;
   }
 }
 
