--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -386,7 +386,7 @@
   font-weight: 800;
   text-align: left;
   color: black;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.65);
 
   @media (max-width: 1280px) {
     font-size: 0.5rem;
