--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -126,6 +126,12 @@
 }
 
 .product-image{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-image > img{
   width: 280px;
 }
 
