--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -267,92 +267,6 @@
   background-size: cover;
 }
 
-//  OLDS
-
-#gallery {
-  display: flex;
-  margin-bottom: -3px;
-  @media (max-width: 768px) {
-    flex-direction: column;
-    padding: 20px 20px 40px 20px;
-  }
-
-  .media {
-    position: relative;
-
-    picture {
-      display: flex;
-
-      img {
-        max-width: 100%;
-        max-height: 100%;
-      }
-    }
-
-    &:hover {
-      .hover {
-        opacity: 1;
-      }
-    }
-
-    .hover {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: calc(100% - 3px);
-      opacity: 0;
-      transition: .5s;
-      z-index: 1;
-    }
-  }
-
-  .slick-dots {
-    position: absolute;
-    bottom: 4rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-
-    li {
-      list-style: none;
-      margin: 0 .25rem;
-
-      button {
-        display: block;
-        width: 1.75rem;
-        height: 1.75rem;
-        background: #ddd;
-        border-radius: 100%;
-        font-size: 0;
-        border: none;
-        transition: .2s ease-in;
-      }
-
-      &.slick-active {
-        button {
-          width: 1.25rem;
-          height: 1.25rem;
-        }
-      }
-    }
-  }
-}
-
-.full-width {
-  width: 100%;
-  margin-bottom: -3px;
-
-  img {
-    width: 100%;
-    height: auto;
-  }
-
-  @media (max-width: 768px) {
-    padding: 20px 20px 0px 20px;
-  }
-}
 
 
 
@@ -417,5 +331,97 @@
 
   @media (max-width: 1280px) {
     padding: 20px 5%;
+  }
+}
+
+// SLICK STYLE
+.slick-dots {
+  position: absolute;
+  bottom: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+  li {
+    list-style: none;
+    margin: 0 .25rem;
+
+    button {
+      display: block;
+      width: 1.75rem;
+      height: 1.75rem;
+      background: #ddd;
+      border-radius: 100%;
+      font-size: 0;
+      border: none;
+      transition: .2s ease-in;
+    }
+
+    &.slick-active {
+      button {
+        width: 1.25rem;
+        height: 1.25rem;
+      }
+    }
+  }
+}
+
+
+
+//  OLDS
+
+#gallery {
+  display: flex;
+  margin-bottom: -3px;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    padding: 20px 20px 40px 20px;
+  }
+
+  .media {
+    position: relative;
+
+    picture {
+      display: flex;
+
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+
+    &:hover {
+      .hover {
+        opacity: 1;
+      }
+    }
+
+    .hover {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: calc(100% - 3px);
+      opacity: 0;
+      transition: .5s;
+      z-index: 1;
+    }
+  }
+
+
+}
+
+.full-width {
+  width: 100%;
+  margin-bottom: -3px;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+
+  @media (max-width: 768px) {
+    padding: 20px 20px 0px 20px;
   }
 }
