--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -336,8 +336,8 @@
 
 // SLICK STYLE
 .slick-dots {
-  position: absolute;
-  bottom: 4rem;
+  // position: absolute;
+  // bottom: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -349,8 +349,8 @@
 
     button {
       display: block;
-      width: 1.75rem;
-      height: 1.75rem;
+      width: 1.25rem;
+      height: 1.25rem;
       background: black;
       border-radius: 100%;
       font-size: 0;
@@ -360,8 +360,8 @@
 
     &.slick-active {
       button {
-        width: 1.25rem;
-        height: 1.25rem;
+        width: 1rem;
+        height: 1rem;
       }
     }
   }
