:lisptick: Change edots color

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -351,7 +351,7 @@
       display: block;
       width: 1.25rem;
       height: 1.25rem;
-      background: black;
+      background: rgb(58, 58, 58);
       border-radius: 100%;
       font-size: 0;
       border: none;
