--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -197,7 +197,7 @@
 
   @media (max-width: 1280px) {
     font-size: 1.5rem;
-    padding: 150px 40px;
+    padding: 40px 40px;
   }
 }
 
@@ -205,6 +205,9 @@
   color: rgba(255, 255, 255, 1);
   transition: 0.3s;
   filter: grayscale(0%);
+  @media (max-width: 1280px) {
+    padding: 150px 40px;
+  }
 }
 
 .categories-additionals__button--ofertas{
@@ -243,7 +246,7 @@
   filter: grayscale(100%);
 
   @media (max-width: 1280px) {
-    padding: 150px 40px;
+    padding: 40px 40px;
     font-size: 1.5rem;
   }
 
@@ -253,6 +256,10 @@
   color: rgba(255, 255, 255, 1);
   transition: 0.2s;
   filter: grayscale(0%);
+  @media (max-width: 1280px) {
+    padding: 150px 40px;
+    font-size: 1.5rem;
+  }
 }
 
 .categories-generals__button--headphones{
