:lipstick: Remove classes

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -348,9 +348,9 @@
 // SLICK STYLE
 .slick-slider{
   @media (max-width: 1280px) {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+    // display: flex;
+    // align-items: center;
+    // gap: 10px;
   }
 }
 
