--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -409,6 +409,24 @@
   align-items: center;
 }
 
+.enterate__container__info{
+  max-width: 300px;
+}
+
+.enterate__container__item__title{
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 1.5rem;
+}
+
+.enterate__container__item__subtitle{
+  font-weight: 300;
+  margin-bottom: 0.3rem;
+}
+.enterate__container__item__button{
+  @include btn(#fff, #383838, #2c2c2d);
+}
+
 .enterate__container__item__picture__image{
   width: 300px;
   height: auto;
