--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -111,10 +111,10 @@
   justify-content: space-around;
   gap: 100px;
 
-  // @media (max-width: 1280px) {
-  //   flex-direction: column;
-  //   gap: 20px
-  // }
+  @media (max-width: 1280px) {
+    flex-direction: column;
+    gap: 20px
+  }
 }
 
 
