:sparkles: Elimiante borders

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -186,7 +186,7 @@
 .categories-additionals__button{
   flex-grow: 1;
   padding: 20px 40px;
-  border-radius: 35px;
+  // border-radius: 35px;
   border: none;
   margin: 0;
   font-size:3rem; 
@@ -236,7 +236,7 @@
 .categories-generals__button{
   flex-grow: 1;
   padding: 251px 20px;
-  border-radius: 35px;
+  // border-radius: 35px;
   border: none;
   margin: 0;
   font-size:3rem; 
@@ -411,7 +411,7 @@
 }
 
 .enterate__container__info{
-  max-width: 300px;
+  max-width: 360px;
   display:flex;
   flex-direction: column;
   gap:15px;
@@ -433,7 +433,7 @@
 }
 
 .enterate__container__item__picture__image{
-  width: 300px;
+  width: 360px;
   height: auto;
   object-fit: cover;
 }
