--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -44,7 +44,7 @@
 }
 
 .home-title{
-  font-size: 2rem;
+  font-size: 4rem;
   font-weight: 500;
   margin-bottom: 0.3rem;
   text-align: start;
@@ -79,14 +79,24 @@
 
 .home-title__button{
   display: block;
-  @include btn(#000, #ededed, #ddd);
+  // @include btn(#000, #ededed, #ddd);
   margin-top: 2rem;
-
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+  padding: 10px 20px;
+  font-size: 12.5rem;
+  font-weight: 700;
 
   @media (max-width: 1280px) {
     margin-top: 1rem;
   }
+}
 
+.home-title__button:active{
+  background-color: white;
+  color: black;
+  transition: 0.3s;
 }
 
 // FEATURED
@@ -194,7 +204,8 @@
   font-weight: 700;
   transition: 0.3s;
   filter: grayscale(100%);
-
+  text-align: center;
+  text-decoration: none;
   @media (max-width: 1280px) {
     font-size: 1.5rem;
     padding: 40px 40px;
@@ -236,13 +247,14 @@
 .categories-generals__button{
   flex-grow: 1;
   padding: 251px 20px;
-  // border-radius: 35px;
   border: none;
   margin: 0;
   font-size:3rem; 
   color: rgba(255, 255, 255, 0.5);
   font-weight: 700;
   transition: 0.2s;
+  text-align: center;
+  text-decoration: none;
   filter: grayscale(100%);
 
   @media (max-width: 1280px) {
