--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -83,10 +83,11 @@
   margin-top: 2rem;
   background-color: transparent;
   color: white;
-  border: 1px solid white;
+  border: 4px solid white;
   padding: 10px 20px;
-  font-size: 12.5rem;
+  font-size: 2.5rem;
   font-weight: 700;
+  text-decoration: none;
 
   @media (max-width: 1280px) {
     margin-top: 1rem;
