:sparkles: Add new padding and color

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -12,6 +12,8 @@
 }
 
 .page-title {
+  color: white; 
+  background-color: black;
   text-align: center;
   text-transform: uppercase;
   font-family: $titleFont;
@@ -131,6 +133,8 @@
 }
 
 .shop-features{
+  color: white;
+  background-color: black;
   display: flex;
   justify-content: space-between;
   padding: 20px 5%;
