--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -457,6 +457,7 @@
 }
 
 .shop-features{
+  background-color: black;
   display: flex;
   justify-content: space-between;
   padding: 20px 5%;
@@ -493,7 +494,7 @@
 }
 
 .shop-features__container__info__title{
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   font-weight: 800;
   margin-bottom: 1rem;
 }
