--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -501,16 +501,16 @@
   margin-bottom: 1rem;
 }
 
-.reveal{
-  position: relative;
-  transform: translateY(150px);
-  opacity: 0;
-  transition: 2s all ease;
-}
-.reveal.active{
-  transform: translateY(0);
-  opacity: 1;
-}
+// .reveal{
+//   position: relative;
+//   transform: translateY(150px);
+//   opacity: 0;
+//   transition: 2s all ease;
+// }
+// .reveal.active{
+//   transform: translateY(0);
+//   opacity: 1;
+// }
 
 //  OLDS
 
