:lipstick: Update web page

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -471,7 +471,11 @@
   }
 }
 
-
+.shop-features__title{
+  padding: 15px 0;
+  text-align: center;
+  font-size: 1.3rem;
+}
 
 .shop-features__container{
   background-color: black;
