:lipstick: Update bar from shopping

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -202,9 +202,10 @@
 
 .filter__section__button--active{
   color: black;
+  font-size: 1rem;
   border-top: 0px solid transparent;
-  border-bottom: 2.5px solid black;
-  font-weight: 700; 
+  border-bottom: 5px solid black;
+  font-weight: 800; 
 
 }
 
