--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -478,10 +478,11 @@
 
 .shop-features__title{
   color: white;
-  padding: 15px 0;
+  padding: 30px 0;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   width: 100%;
+  font-weight: 600;
 }
 
 .shop-features__container{
