--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -483,6 +483,11 @@
   font-size: 1.4rem;
   width: 100%;
   font-weight: 600;
+
+  @media (max-width: 768px) {
+    font-size: 1.2rem;
+    padding: 30px;
+  }
 }
 
 .shop-features__container{
