--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -178,6 +178,19 @@
   text-align: center;
 }
 
+.product-off{
+  right: 0;
+  top: 0;
+  position: absolute;
+  background-color: #ff0000;
+  color: white;
+  padding: 5px 10px;
+  font-size: 0.8rem;
+  font-weight: 500; 
+  text-align: center;
+  border-radius: 50%;
+}
+
 // CATEGORIES
 .categories{
   font-family: 'Helvetica Neue', sans-serif;
