:sparkles: Add off discount

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -181,12 +181,11 @@
 .product-off{
   right: 0;
   top: 0;
-  position: absolute;
-  background-color: #ff0000;
+  background-color: black;
   color: white;
   padding: 5px 10px;
   font-size: 0.8rem;
-  font-weight: 500; 
+  font-weight: 800; 
   text-align: center;
   border-radius: 50%;
 }
