--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -91,7 +91,7 @@
   font-weight: 700;
   text-decoration: none;
   text-align: center;
-  width: 50%;
+  // width: 50%;
   z-index: 1000;
   @media (max-width: 1280px) {
     margin-top: 1rem;
