:lipstick: Add new values

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -92,6 +92,7 @@
   text-decoration: none;
   text-align: center;
   // width: 50%;
+  width: 100%;
   z-index: 1000;
   @media (max-width: 1280px) {
     margin-top: 1rem;
