--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -278,7 +278,7 @@
   filter: grayscale(100%);
 
   @media (max-width: 1280px) {
-    padding: 40px 40px;
+    padding: 60px 40px;
     font-size: 1.5rem;
   }
 
@@ -293,11 +293,13 @@
 .categories-generals__button--headphones{
   background: url(../assets/HP_CATEGORY_CUT.jpg) no-repeat center;
   background-size: cover;
+  background-position-y: -130px;
 }
 
 .categories-generals__button--tw{
   background: url(../assets/TW_CATEGORY_CUT.jpg) no-repeat center;
   background-size: cover;
+  background-position-y: -50px;
 }
 
 
