--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -49,7 +49,7 @@
   margin-bottom: 0.3rem;
   text-align: start;
   color: white;
-  display: none;
+  // display: none;
 
   @media (max-width: 1280px) {
     font-size: 2rem;
@@ -76,7 +76,7 @@
   height: $home_banner_size!important;
   width: 100%;
   object-fit: cover;
-  // filter: brightness(0.4)
+  filter: brightness(0.4)
 }
 
 .home-title__button{
@@ -91,8 +91,8 @@
   font-weight: 700;
   text-decoration: none;
   text-align: center;
-  // width: 50%;
-  width: 100%;
+  width: 50%;
+  // width: 100%;
   z-index: 1000;
   @media (max-width: 1280px) {
     margin-top: 1rem;
