:sparkles: Update the image

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -107,9 +107,9 @@
   transition: 0.3s;
 }
 
-.home-title__image{
-  padding-top: 250px;
-}
+// .home-title__image{
+  // padding-top: 250px;
+// }
 
 // FEATURED
 
