--- a/src/scss/mayoristas.scss
+++ b/src/scss/mayoristas.scss
@@ -6,7 +6,7 @@
 }
 
 .main-mayoristas__title{ 
-    font-size: 2.5rem;
+    font-size: 4rem;
     font-weight: 700;
     text-align: center;
     margin-bottom: 20px;
@@ -16,10 +16,11 @@
 }
 
 .main-mayoristas__subtitle{
-    font-size: 1.5rem;
+    font-size: 1.72rem;
     font-weight: 300;
     text-align: center;
-    margin-bottom: 20px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     @media (max-width: 768px) {
         font-size: 1rem;
     }
@@ -28,6 +29,13 @@
 // Define variables for common styles
 $primary-color: #000000;
 
+
+.forms-mayoristas{
+    padding-top: 100px;
+    @media (max-width: 768px) {
+        padding-top: 25px;
+    }
+}
 // Base styles for labels and inputs
 .forms_label {
   display: flex;
@@ -42,6 +50,7 @@ $primary-color: #000000;
 
   &__input,
   &__textinput {
+    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
