--- a/src/scss/mayoristas.scss
+++ b/src/scss/mayoristas.scss
@@ -9,6 +9,7 @@
     font-size: 4rem;
     font-weight: 700;
     text-align: center;
+    margin-top: 20px;
     margin-bottom: 20px;
     @media (max-width: 768px) {
         font-size: 1.5rem;
