--- a/src/scss/mayoristas.scss
+++ b/src/scss/mayoristas.scss
@@ -1,7 +1,9 @@
 .main-mayoristas{
-    padding: 5%;
+    padding: 0 5%;
+    padding-bottom: 25px;
     @media (max-width: 768px) {
-        padding: 3%px;
+      padding:0 3%;
+      padding-bottom: 25px;
     }
 }
 
@@ -45,7 +47,8 @@ $primary-color: #000000;
 
   &__label {
     font-weight: bold;
-    margin-bottom: 5px;
+    padding: 10px 0;
+    // margin-bottom: 5px;
     color: $primary-color;
   }
 
