:sparkles: Add additional content

--- a/src/scss/mayoristas.scss
+++ b/src/scss/mayoristas.scss
@@ -116,3 +116,9 @@ $primary-color: #000000;
 // Additional responsive styles can be added as needed
 
 // Include other styles and imports as necessary
+.forms-adicional__content{
+  padding: 25px 0;
+  font-size: 1.5rem;
+  color:black;
+  font-style: italic;
+}
