--- a/src/scss/_megamenu.scss
+++ b/src/scss/_megamenu.scss
@@ -451,3 +451,33 @@
     }
   }
 }
+
+
+.mega-menu-item {
+  .container {
+    justify-content: flex-end;
+
+    ul {
+      width: 25%;
+
+      li {
+        list-style: none;
+        margin-bottom: 1rem;
+
+        a {
+          color: #000;
+          text-transform: uppercase;
+          font-size: 1rem;
+          line-height: 1.6rem;
+          font-weight: 700;
+          text-decoration: none;
+          transition: color .15s ease;
+
+          &:hover {
+            color: #969696;
+          }
+        }
+      }
+    }
+  }
+}
