--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -132,6 +132,7 @@
   display: flex;
   justify-content: space-around;
   gap: 100px;
+  align-items: end;
 
   @media (max-width: 1280px) {
     flex-direction: column;
