--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -611,3 +611,13 @@
 }
 
 
+.home-popup{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  z-index: 100;
+  width: 500px;
+  max-width: 80%;
+}
