:sparkles: Add overlay

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -622,3 +622,13 @@
   max-width: 81%;
   color: white;
 }
+
+#overlay{
+  width: 100vw;
+  height: 100vh;
+  z-index: 99;
+  position: fixed;
+  top: 0; 
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
