:hammer: Update font weight

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Helvetica Neue LT';
   font-style: normal;
-  font-weight: normal;
+  // font-weight: normal;
   font-display: swap;
   src: local('Helvetica Neue LT'), url('../fonts/HelveticaNeueLTStd-Bd.woff2') format('woff2');
 }
