:lipstick: Update padding

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -618,10 +618,11 @@
   transform: translate(-50%, -50%);
   background-color: black;
   z-index: 100;
-  width: 500px;
+  width: 550px;
   max-width: 81%;
   color: white;
   font-family: "Helvetica Neue LT", sans-serif;
+  padding: 3% 5%;
 }
 
 .home-popup__body__title{
