:lipstick: Update button values

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -654,6 +654,24 @@
   font-size: 16px;
 }
 
+.home-popup__forms__submit{
+  margin: 15px 0;
+  background-color: black;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    border-radius: 4px;
+  }
+}
+
 #overlay{
   width: 100vw;
   height: 100vh;
@@ -663,3 +681,4 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
