:sparkles: Update the logo height

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -632,6 +632,11 @@
   text-align: center;
 }
 
+.home-popup__body__logo{
+  height: 100px;
+  width: auto;
+}
+
 .home-popup__body__subtitle{ 
   font-size: 0.9rem;
   font-weight: 300;
