--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -633,8 +633,8 @@
 }
 
 .home-popup__body__logo{
-  height: 101px;
-  width: auto;
+  height: 101px!important;
+  width: auto!important;
 }
 
 .home-popup__body__subtitle{ 
