:lipstick: Update btn colors

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -661,7 +661,7 @@
 }
 
 .home-popup__forms__submit{
-  @include btn(#fff, #383838, #2c2c2d);
+  @include btn(#000, #f6f6f6, #fff);
 }
 
 .home-popup__body__terms{
