--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -641,7 +641,7 @@
 }
 
 .home-popup__body__logo{
-  height: 101px!important;
+  height: 50px!important;
   width: auto!important;
 }
 
@@ -659,6 +659,10 @@
   text-align: center;
 }
 
+.home-popup__body__forms{
+  font-size: 12px;
+}
+
 .home-popup__forms__input{
   width: 100%;
   padding: 10px;
@@ -669,7 +673,14 @@
 }
 
 .home-popup__forms__submit{
-  @include btn(#000, #f6f6f6, #fff);
+  padding: 10px;
+  color:black;
+  background-color: white;
+
+  :hover{
+    background-color: #ccc;
+
+  }
 }
 
 .home-popup__body__terms{
