:lipstick: Update button color

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -673,7 +673,8 @@
 }
 
 .home-popup__forms__submit{
-  padding: 10px;
+  padding: 10px 20px;
+  font-family:  "Helvetica Neue LT", sans-serif;;
   color:black;
   background-color: white;
 
