:lipstick: Update values

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -641,15 +641,16 @@
 .home-popup__body__subtitle{ 
   font-size: 0.9rem;
   font-weight: 300;
-  padding: 0 0 10px 0;
+  padding: 30px 0 20px 0;
   text-align: center;
 }
 
 .home-popup__body__offer{
   font-size: 1.8rem;
   font-weight: 700;
-  padding: 24px 0;
+  padding: 24px 0 0 0;
   text-align: center;
+  line-height: 0.9;
 }
 
 .home-popup__body__forms{
