:lipstick: Eliminate spinner

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -686,6 +686,10 @@
   }
 }
 
+.wpcf7-spinner{
+  display: none!important;
+}
+
 .home-popup__body__terms{
   font-size: 0.6rem;
   font-weight: 200;
