:lipstick: Update newsletter style

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -623,6 +623,7 @@
   color: white;
   font-family: "Helvetica Neue LT", sans-serif;
   padding: 1% 5%;
+  padding-bottom: 2,5rem;
 }
 
 .home-popup__header{
@@ -635,7 +636,7 @@
   color: white;
   background-color: black;
   border:none;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .home-popup__body__subtitle{ 
