:lipstick: Home udpdate

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -622,7 +622,7 @@
   max-width: 81%;
   color: white;
   font-family: "Helvetica Neue LT", sans-serif;
-  padding: 1% 5%;
+  padding: 1% 5% 3% 5%;
   padding-bottom: 2,5rem;
 }
 
