--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -618,13 +618,20 @@
   left: 50%;
   transform: translate(-64%, -50%);
   display: flex;
+  width: 900px;
+  max-width: 80%;
+
 }
 
+.home-popup__image{
+  @media (max-width: 1280px) {
+    display: none;
+  }
+}
 
 .home-popup{
   background-color: black;
   width: 551px;
-  max-width: 81%;
   color: white;
   font-family: "Helvetica Neue LT", sans-serif;
   padding: 1% 5% 3.1% 5%;
@@ -661,6 +668,7 @@
 }
 
 .home-popup__body__forms{
+  padding-top: 50px;
   font-size: 12px;
 }
 
