--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -694,9 +694,14 @@
   color:black;
   background-color: white;
   border: none;
+  cursor: pointer;
 
-  :hover{
-    background-color: #ccc;
+  border: white 1px solid;
+
+  :active{
+    background-color: black;
+    color: white;
+    border: 1px solid white;
 
   }
 }
