:bug: Correct on hove and on active initeractions

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -698,7 +698,11 @@
 
   border: white 1px solid;
 
-  :active{
+  &:hover{
+    background-color: #ccc;
+  }
+
+  &:active{
     background-color: black;
     color: white;
     border: 1px solid white;
