:lipstick: Update spacing on the padding

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -634,7 +634,7 @@
   width: 551px;
   color: white;
   font-family: "Helvetica Neue LT", sans-serif;
-  padding: 1% 5% 3.1% 5%;
+  padding: 1% 5% 25px 5%;
   padding-bottom: 2,5rem;
 }
 
