:sparkles: Add ofertas inside main menu

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,7 +40,7 @@ button {
 }
 
 #main-header {
-  height: 58px;
+  height: 80px;
   background: #000;
   position: sticky;
   top: 0;
@@ -137,7 +137,7 @@ button {
           position: relative;
           color: #fff;
           text-decoration: none;
-          font-size: .75714rem;
+          font-size: 0.9rem;
           font-weight: 400;
           text-transform: uppercase;
 
