--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -136,7 +136,8 @@
 
   @media (max-width: 1280px) {
     flex-direction: column;
-    gap: 20px
+    gap: 20px; 
+    align-items: center;
   }
 }
 
