--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -134,15 +134,17 @@
   gap: 100px;
   align-items: end;
 
-  @media (max-width: 1280px) {
+  @media (max-width: 768px) {
     flex-direction: column;
-    gap: 20px; 
-    align-items: center;
+    padding: 20px 20px 40px 20px;
+    // gap: 20px; 
+    // align-items: center;
   }
 }
 
 
 .top-products-container__item{
+  position: relative;
   display: flex;
   flex-direction: column;
   text-decoration: none;
